--- WICHTIG: mit Betaversion gemerged! --- Würfelfunktion - noch ohne Schüttelfunktion und Spielintegration man tippt Button an und es kommt eine Zahl

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,7 @@
             android:screenOrientation="landscape"/>
         <activity android:name=".GameActivity"
             android:screenOrientation="landscape"/>
+        <activity android:name=".DiceActivity" />
     </application>
 
 </manifest>
