Ich habe das Problem mit dem DIalog endlich gelöst!!! Man kann ihn nun mit Hilfe eines Buttons schließen :) ansonsten ist es in die BetaVersion eingebunden. Aber noch keine Verbindung zum Spielfeld.

--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,8 @@
 buildscript {
     repositories {
         jcenter()
+        //ebenfalls zur Unterstützung von Gif-Animationen
+        mavenCentral()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:2.3.1'
@@ -15,6 +17,7 @@ buildscript {
 allprojects {
     repositories {
         jcenter()
+        mavenCentral()
     }
 }
 
