--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,4 +28,10 @@ dependencies {
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile "com.esotericsoftware:kryonet:2.22.0-RC1"
     testCompile 'junit:junit:4.12'
+
+    //damit Gif-Animationen benutzt werden können
+    compile 'com.android.support:appcompat-v7:25.3.1'
+    compile 'com.android.support.constraint:constraint-layout:1.0.2'
+    compile 'pl.droidsonroids.gif:android-gif-drawable:1.2.4'
+
 }
