Kleine Änderungen für Dialog Gewonnen und Dialog Verloren:
In EndActivity den onclicklistener hinzugefügt.

Im AndroidManifest die EndActivity angemeldet.

Und in der GameActivity die Positionierungen von den Siegbedingungen adaptiert bzw. teilweise in die jeweiligen Runnable verschoben, damit man diese dann sofort sieht und nicht erst nach dem Klicken.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,8 @@
             android:screenOrientation="landscape"/>
         <activity android:name=".GameActivity"
             android:screenOrientation="landscape"/>
+        <activity android:name=".EndActivity"
+            android:screenOrientation="landscape"/>
     </application>
 
 </manifest>
